# bfu_2025

./: .gitignore  README.md
projects/project_1/: CMakeLists.txt  main.cpp
projects/project_2/: CMakeLists.txt  main.cpp
projects/project_3/: main.cpp
projects/test_01/: CMakeLists.txt  main.cpp
